--- a/templates/catalog_update.html
+++ b/templates/catalog_update.html
@@ -11,24 +11,8 @@ Update
 
 <!------------------------------------------------------------------------------->
 {% block nav %}
-<div class="col">
+{% include 'navAdd.html' %}
 
-<ul class="list-group">
-          <li class="list-group-item">
-            <a class="nav-link" href="#">Введите данные по дефекту</a>
-          </li>
-            <li class="list-group-item">
-            <a class="nav-link" href="#">Введите наименование дефекта</a>
-			</li>
- 			<li class="list-group-item">
-           <a class="nav-link" href="#">Введите операцию</a>
-          </li>
- 			<li class="list-group-item">
-           <a class="nav-link" href="#">Введите информацию по изделию</a>
-          </li>
-        </ul>
-
-</div>
 {% endblock %}
 
 {% block main %}
