--- a/templates/add_operation.html
+++ b/templates/add_operation.html
@@ -35,18 +35,8 @@ Add operation
     background: #fff !important;
   }
 </style>
-<!------------------------------------------------------------------------------->
-<div class="col">
-  <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
-    style="position: relative;  height: calc(100vh - 25vh); overflow: auto;">
-    <nav class="nav flex-column  p-4">
-      <a class="nav-link" href="add_catalog">Введите данные по дефекту</a>
-      <a class="nav-link" href="add_defect">Введите наименование дефекта</a>
-      <a class="nav-link" href="add_operation">Введите операцию</a>
-      <a class="nav-link" href="add_product">Введите информацию по изделию</a>
-   </nav>
-  </div>
-</div>
+
+{% include 'navAdd.html' %}
 
 
 {% endblock %}
