--- a/templates/add_catalog.html
+++ b/templates/add_catalog.html
@@ -102,7 +102,7 @@ Add
 </div>
 
 </div>
-
+<div class='page' id="add_catalog"></div> 
 <!------------------------------------------------------------------------------->
 
 
