--- a/templates/add_defect.html
+++ b/templates/add_defect.html
@@ -106,7 +106,7 @@ Add
   </div>
 </div>
 <!---------------------------------------------------------------------------------------->
-
+<div class='page' id="add_defect"></div> 
 
 
 <script>
