--- a/templates/catalog_update.html
+++ b/templates/catalog_update.html
@@ -113,7 +113,7 @@ Update
 </div>
 
 <!------------------------------------------------------------------------------->
-
+<div class='page' id="add_catalog"></div> 
 
 <script>
   let a = document.getElementById(this.id);
