--- a/templates/defect_update.html
+++ b/templates/defect_update.html
@@ -80,7 +80,7 @@ td {
             </div>
         </div>
 <!---------------------------------------------------------------------------------------->
-
+<div class='page' id="add_defect"></div> 
 
 <br>
 <div class="col-md-11">
