--- a/templates/operation_update.html
+++ b/templates/operation_update.html
@@ -141,7 +141,7 @@ Update defect
   </div>
 </form>
 <!---------------------------------------------------------------------------------------->
-
+  <div class='page' id="add_operation"></div>     
 <script>
 
   window.onload = function () {
