--- a/templates/product_update.html
+++ b/templates/product_update.html
@@ -140,7 +140,7 @@ td {
 </div>
 </form>
 <!---------------------------------------------------------------------------------------->
-
+  <div class='page' id="add_product"></div>     
 <script>
 
 window.onload = function () {
