--- a/templates/add_operation.html
+++ b/templates/add_operation.html
@@ -122,7 +122,7 @@ Add operation
 </div>
 <!---------------------------------------------------------------------------------------->
 
-      
+<div class='page' id="add_operation"></div>      
 
 <script>
     
