--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -126,7 +126,7 @@ Add product
 </div>
 <!---------------------------------------------------------------------------------------->
 
-      
+  <div class='page' id="add_product"></div>     
 
 <script>
     
