--- a/templates/navAdd.html
+++ b/templates/navAdd.html
@@ -2,6 +2,13 @@
     .nav a {
         color: #333333 !important;
     }
+
+
+.nav a active {
+      color: #ff8111 !important; 
+      font-size: 1rem;
+	  font-weight: 400;
+	}
 </style>
 
 <!------------------------------------------------------------------------------->
@@ -9,10 +16,14 @@
     <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
         style="position: relative;  height: calc(100vh - 25vh); overflow: auto;">
         <nav class="nav flex-column  p-4">
-            <a class="nav-link" href="/add_catalog">Введите данные по дефекту</a>
-            <a class="nav-link" href="/add_defect">Введите наименование дефекта</a>
-            <a class="nav-link" href="/add_operation">Введите операцию</a>
-            <a class="nav-link" href="/add_product">Введите информацию по изделию</a>
+            <a class="nav-link" id="add_catalog"  href="/add_catalog">Введите данные по дефекту</a>
+            <a class="nav-link" id="add_defect" href="/add_defect">Введите наименование дефекта</a>
+            <a class="nav-link" id="add_operation" href="/add_operation">Введите операцию</a>
+            <a class="nav-link" id="add_product" href="/add_product">Введите информацию по изделию</a>
         </nav>
     </div>
 </div>
+
+ <script>
+
+</script>
