--- a/templates/navAdd.html
+++ b/templates/navAdd.html
@@ -15,7 +15,7 @@
 <div class="col">
     <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
         style="position: relative;  height: calc(100vh - 25vh); overflow: auto;">
-        <nav class="nav flex-column  p-4">
+        <nav class="nav flex-column add p-4">
             <a class="nav-link" id="add_catalog"  href="/add_catalog">Введите данные по дефекту</a>
             <a class="nav-link" id="add_defect" href="/add_defect">Введите наименование дефекта</a>
             <a class="nav-link" id="add_operation" href="/add_operation">Введите операцию</a>
